--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
+    "redis": "^4.0.4",
     "sequelize": "^6.17.0",
     "sequelize-cli": "^6.4.1",
     "sqlite": "^4.0.25"
