--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "redis": "^4.0.4",
